objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>HELMS Sales Process</fullName>
        <description>This sales Process is used in Acura, Honda, PSP and NSX Record Types</description>
        <isActive>true</isActive>
        <values>
            <fullName>Acknowledged</fullName>
        </values>
        <values>
            <fullName>Assigned to Dealer</fullName>
        </values>
        <values>
            <fullName>Closed Inactive</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Dealer Visit</fullName>
        </values>
        <values>
            <fullName>In Conversation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HELMS Standard Process</fullName>
        <description>Used by HELMS to follow a Sales Process. This Process is used in PE, Marine and Engine Record Types</description>
        <isActive>true</isActive>
        <values>
            <fullName>Acknowledged</fullName>
        </values>
        <values>
            <fullName>Assigned to Dealer</fullName>
        </values>
        <values>
            <fullName>Closed Inactive</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Dealer Visit</fullName>
        </values>
        <values>
            <fullName>In Conversation</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>NSX Processes</fullName>
        <description>This process only for NSX record type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Sales Order</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Activefin_TXT__c</fullName>
        <label>Active Financing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcuraCurrentProductsOwned2_TXT__c</fullName>
        <label>Acura Current Products Owned 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcuraCurrentProductsOwned_TXT__c</fullName>
        <label>Acura Current Products Owned</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcuraHighValueTrimlinePropensity_NUM__c</fullName>
        <label>Acura High Value Trimline Propensity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcuraOwnershipStatusHousehold_TXT__c</fullName>
        <label>Acura Ownership Status Household</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcuraOwnershipStatus_TXT__c</fullName>
        <label>Acura Ownership Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressType_TXT__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Error_CD__c</fullName>
        <label>Address Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Error_Description_TXT__c</fullName>
        <label>Address Error Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Status_TXT__c</fullName>
        <label>Address Status</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_TXT__c</fullName>
        <formula>Apartment_TXT__c&amp;&quot;,&quot; &amp;Street_TXT__c&amp;&quot;,&quot;
&amp;City_TXT__c&amp;&quot;,&quot; &amp;State_TXT__c &amp;&quot;,&quot; &amp;ZipCode_TXT__c &amp;&quot;,&quot;
&amp;Country_TXT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_NUM__c</fullName>
        <formula>(NOW() -  (CreatedDate)) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of hours passed since the opportunity was created.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apartment_TXT__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Apartment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppartmentNumber_TXT__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Apartment Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantNumber_TXT__c</fullName>
        <label>Applicant Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Date_and_Time__c</fullName>
        <label>Appointment Date and Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Id__c</fullName>
        <label>Appointment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Location__c</fullName>
        <label>Appointment Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Notes__c</fullName>
        <label>Appointment Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_type__c</fullName>
        <label>Appointment type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_TXT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User (Dealer) to whom the opportunity is assigned to.  blank value would mean it is assigned to just the Dealership in general without a specific sales user</description>
        <label>Assigned To</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only assign a user from the same Dealer as the Preferred Dealer on the opportunity</errorMessage>
            <filterItems>
                <field>$Source.PreferredDealerAccount_TXT__c</field>
                <operation>equals</operation>
                <valueField>User.Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigned_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BalanceAmount_NUM__c</fullName>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BalanceType_TXT__c</fullName>
        <label>Balance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BodyStyle_TXT__c</fullName>
        <label>Body Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandLoyaltyLevel_TXT__c</fullName>
        <label>Brand Loyalty Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandsiteShoppingTool_TXT__c</fullName>
        <label>Brandsite Shopping Tool</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Elasped__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of business hours elapsed since the opportunity has been created.</inlineHelpText>
        <label>Business Hours Elapsed</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CID_TXT__c</fullName>
        <label>CID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Payload__c</fullName>
        <label>CRM Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category_TXT__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sedans</fullName>
                </value>
                <value>
                    <fullName>Hatchbacks</fullName>
                </value>
                <value>
                    <fullName>Supercar</fullName>
                </value>
                <value>
                    <fullName>Touring</fullName>
                </value>
                <value>
                    <fullName>Cruiser</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Supersport</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
                <value>
                    <fullName>Neo Sports Cafe</fullName>
                </value>
                <value>
                    <fullName>miniMOTO</fullName>
                </value>
                <value>
                    <fullName>Dual Sport</fullName>
                </value>
                <value>
                    <fullName>Scooter</fullName>
                </value>
                <value>
                    <fullName>Trail</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Adventure</fullName>
                </value>
                <value>
                    <fullName>Rec/Utility</fullName>
                </value>
                <value>
                    <fullName>Home Back-up</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Recreational</fullName>
                </value>
                <value>
                    <fullName>Super Quiet</fullName>
                </value>
                <value>
                    <fullName>Economy</fullName>
                </value>
                <value>
                    <fullName>Lawn Mowers</fullName>
                </value>
                <value>
                    <fullName>HRX Series</fullName>
                </value>
                <value>
                    <fullName>HRN Series</fullName>
                </value>
                <value>
                    <fullName>HRS Series</fullName>
                </value>
                <value>
                    <fullName>HRC Series</fullName>
                </value>
                <value>
                    <fullName>MIIMO</fullName>
                </value>
                <value>
                    <fullName>Mini Tiller</fullName>
                </value>
                <value>
                    <fullName>Mid-Tine Tiller</fullName>
                </value>
                <value>
                    <fullName>Rear-Tine Tiller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cell_Phone_Error_CD__c</fullName>
        <label>Cell Phone Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chat_Transcript__c</fullName>
        <description>This field is used to store Chat Transcript on Opportunity  object</description>
        <label>Chat Transcript</label>
        <length>65536</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>City_TXT__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CleansedAddress_TXT__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Cleansed Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Color_TXT__c</fullName>
        <label>Color</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Color_XML__c</fullName>
        <label>Color_XML</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete_Prediction_Score__c</fullName>
        <label>Complete Prediction Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Condition_TXT__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good,</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactKey_TXT__c</fullName>
        <label>Contact Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMethod_TXT__c</fullName>
        <label>Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Business Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactTime_TXT__c</fullName>
        <label>Contact Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>morning</fullName>
                </value>
                <value>
                    <fullName>afternoon</fullName>
                </value>
                <value>
                    <fullName>evening</fullName>
                </value>
                <value>
                    <fullName>nopreference</fullName>
                </value>
                <value>
                    <fullName>day</fullName>
                </value>
                <value>
                    <fullName>anytime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactType_TXT__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_person__c</fullName>
        <label>Contact person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Predicted_Probability__c</fullName>
        <label>Conversion Predicted Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversion_Time_in_Minute__c</fullName>
        <formula>if(
(FLOOR((CreatedDate- Lead_ID__r.Created_Date__c))*24*60)+((FLOOR(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24, 24 )))*60)+(ROUND(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24 * 60, 60 ), 0))&lt;1, &apos;A - Less Than 1 minute&apos; ,
if(
(FLOOR((CreatedDate- Lead_ID__r.Created_Date__c))*24*60)+((FLOOR(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24, 24 )))*60)+(ROUND(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24 * 60, 60 ), 0))&gt;=1 &amp;&amp; (FLOOR((CreatedDate- Lead_ID__r.Created_Date__c))*24*60)+((FLOOR(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24, 24 )))*60)+(ROUND(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24 * 60, 60 ), 0))&lt;=5, &apos;B - 1 to 5 minutes&apos;,
if(
(FLOOR((CreatedDate- Lead_ID__r.Created_Date__c))*24*60)+((FLOOR(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24, 24 )))*60)+(ROUND(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24 * 60, 60 ), 0))&gt;=5 &amp;&amp; (FLOOR((CreatedDate- Lead_ID__r.Created_Date__c))*24*60)+((FLOOR(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24, 24 )))*60)+(ROUND(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24 * 60, 60 ), 0))&lt;=15, &apos;C - 5 to 15 minutes&apos;,
if(
(FLOOR((CreatedDate- Lead_ID__r.Created_Date__c))*24*60)+((FLOOR(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24, 24 )))*60)+(ROUND(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24 * 60, 60 ), 0))&gt;=15 &amp;&amp; (FLOOR((CreatedDate- Lead_ID__r.Created_Date__c))*24*60)+((FLOOR(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24, 24 )))*60)+(ROUND(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24 * 60, 60 ), 0))&lt;=30, &apos;D - 15 to 30 minutes&apos;,
if(
(FLOOR((CreatedDate- Lead_ID__r.Created_Date__c))*24*60)+((FLOOR(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24, 24 )))*60)+(ROUND(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24 * 60, 60 ), 0))&gt;=30 &amp;&amp; (FLOOR((CreatedDate- Lead_ID__r.Created_Date__c))*24*60)+((FLOOR(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24, 24 )))*60)+(ROUND(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24 * 60, 60 ), 0))&lt;=120, &apos;E - 30 minutes to 2 hours&apos;,
if(
(FLOOR((CreatedDate- Lead_ID__r.Created_Date__c))*24*60)+((FLOOR(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24, 24 )))*60)+(ROUND(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24 * 60, 60 ), 0))&gt;=120 &amp;&amp; (FLOOR((CreatedDate- Lead_ID__r.Created_Date__c))*24*60)+((FLOOR(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24, 24 )))*60)+(ROUND(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24 * 60, 60 ), 0))&lt;=1440, &apos;F - 2 to 24 hours&apos;,
if(
(FLOOR((CreatedDate- Lead_ID__r.Created_Date__c))*24*60)+((FLOOR(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24, 24 )))*60)+(ROUND(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24 * 60, 60 ), 0))&gt;=1440 &amp;&amp; (FLOOR((CreatedDate- Lead_ID__r.Created_Date__c))*24*60)+((FLOOR(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24, 24 )))*60)+(ROUND(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24 * 60, 60 ), 0))&lt;=2880, &apos;G - 24 to 48 hours&apos;,
if(
(FLOOR((CreatedDate- Lead_ID__r.Created_Date__c))*24*60)+((FLOOR(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24, 24 )))*60)+(ROUND(MOD((CreatedDate- Lead_ID__r.Created_Date__c)* 24 * 60, 60 ), 0))&gt;=2880, &apos;H - More than 48 hours&apos; ,&apos;&apos;
))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Time in Minute</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_TXT__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_DT__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Date_Pacific_Time__c</fullName>
        <formula>IF( ( NOW() &gt;= $Setup.DST_Setting__c.DST_Start_Date__c) &amp;&amp;  ( NOW() &lt;= $Setup.DST_Setting__c.DST_End_Date__c)  , CreatedDate-(7/24), CreatedDate-(8/24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date(Pacific Time)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Currency_AM__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentHondaCustomer_FLG__c</fullName>
        <formula>IF( ENR_Acura_Vehicles_Owned__c  &gt; 0 ||
    ENR_Honda_Vehicles_Owned__c &gt; 0 ||  
    (ENR_Power_Sports_Vehicles_Owned__c  &gt; 0 &amp;&amp; ENR_Power_Sports_Vehicles_Owned__c != null) , True, False  || 
    (ENR_Power_Equipment_Vehicles_Owned__c &gt; 0 &amp;&amp; ENR_Power_Equipment_Vehicles_Owned__c != null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Honda Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Month__c</fullName>
        <description>Field to show if Opportunity is created in Current Month - CAPS-5055</description>
        <formula>IF(
  AND(
    MONTH(DATEVALUE( CreatedDate)) = MONTH((TODAY())),
    YEAR(DATEVALUE( CreatedDate)) = YEAR((TODAY()))
  ), 
  1, 
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Week_ZDX__c</fullName>
        <description>CAPS-5055</description>
        <formula>IF( CONTAINS( Name , &quot;ZDX&quot;) , 
IF(TODAY() - (WEEKDAY(TODAY())) &lt;= DATEVALUE(CreatedDate),1,0), 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Week ZDX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Week__c</fullName>
        <description>CAPS-5055</description>
        <formula>IF(TODAY() - (WEEKDAY(TODAY())) &lt;= DATEVALUE(CreatedDate),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Business Unit: HELMS.
Jira Story: LMS-5361 Story name.
Description: This is store the true or false form Integration
Source System: Coming from Integration.
Integration: Yes.
Data Transformation: N/A.
Functional Definition: This will store true or false based on mail triggered..</description>
        <label>Customer Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Escalation_Requested_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Escalation Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Escalation_Sent_Date_Time_DT__c</fullName>
        <label>Customer Escalation Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Geocodes__c</fullName>
        <label>Customer Geocodes</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Customer_Ids_ID__c</fullName>
        <label>Customer IDs</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DEPOSIT_AMOUNT__c</fullName>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMGR_Age__c</fullName>
        <description>Holds the Age with the purpose of Demographics analysis.</description>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMGR_Baseball__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Baseball</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Basketball__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Basketball</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Children__c</fullName>
        <description>Number of children with the purpose of Demographics analysis.</description>
        <label>Children</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMGR_Education_Level__c</fullName>
        <label>Education Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMGR_Environmental_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Environmental Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Football__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Football</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Golf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Golf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Green_Living__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the customer has a green home</description>
        <label>Green Living</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Hockey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hockey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Home_Owner_or_Renter__c</fullName>
        <label>Home Owner or Renter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMGR_Household_Size__c</fullName>
        <description>Represents the number of persons living in a private household</description>
        <label>Household Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMGR_Income_Estate_HHLD_Higher_Ranges__c</fullName>
        <description>Represents the ranking of Household Income and Wealth</description>
        <label>Income Estate HHLD Higher Ranges</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMGR_Income__c</fullName>
        <description>Holds the approximated amount of income  with the purpose of Demographics analysis.</description>
        <label>Income</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMGR_Marital_Status__c</fullName>
        <description>Represents the Marital status  with the purpose of Demographics analysis.</description>
        <label>Marital Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMGR_Occupation_Detailed__c</fullName>
        <description>Short description of the responsibilities from the Occupation</description>
        <label>Occupation Detailed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMGR_Occupation__c</fullName>
        <description>Name of the Occupation</description>
        <label>Occupation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMGR_Outdoors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outdoors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Photography__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Photography</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Skiing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skiing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_US_Travel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US Travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMGR_Vehicle_Known_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the customer owns a Honda Vehicle</description>
        <label>Vehicle Known Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSP_Routing_Response_Message__c</fullName>
        <label>DSP Routing Response Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSP_Routing_Status_Message__c</fullName>
        <label>DSP Routing Status Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DSP_Status__c</fullName>
        <label>DSP Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSP_Update_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSP Update Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateofLastService_DT__c</fullName>
        <label>Date of Last Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <label>Deal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Link__c</fullName>
        <label>Deal Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerAccountfromADF_TXT__c</fullName>
        <label>Dealer Account from ADF</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DealerContactfromADF_TXT__c</fullName>
        <label>Dealer Contact from ADF</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DealerID_ID__c</fullName>
        <label>DealerID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerMetroName__c</fullName>
        <description>created this field as part of AMSLM-894.
we used this field in Leads by Market Report for Automation.
This report will run every Monday.</description>
        <formula>PreferredDealerAccount_TXT__r.Dealer_Metro_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DealerMetroName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Assignment_Type__c</fullName>
        <label>Dealer Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Selected</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Proximity</fullName>
                </value>
                <value>
                    <fullName>LDRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_CRM_Vendor__c</fullName>
        <description>This field shows the name of the CRM system to which the opportunity was sent if the opportunity is eligible for routing.</description>
        <label>Dealer CRM Vendor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Ids_ID__c</fullName>
        <label>Dealer IDs</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delta_TXT__c</fullName>
        <label>Delta</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>